// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseInput - basic functionality: After gets correct error prop 1`] = `
Object {
  "$adjoined": "none",
  "$disabled": false,
  "$error": true,
  "$isFocused": false,
  "$positive": false,
  "$required": false,
  "$size": "default",
}
`;

exports[`BaseInput - basic functionality: After gets correct props 1`] = `
Object {
  "$adjoined": "none",
  "$disabled": false,
  "$error": false,
  "$isFocused": false,
  "$positive": false,
  "$required": false,
  "$size": "default",
}
`;

exports[`BaseInput - basic functionality: Base input has correct props 1`] = `
Object {
  "aria-describedby": null,
  "aria-invalid": false,
  "aria-label": null,
  "aria-labelledby": null,
  "aria-required": false,
  "autoComplete": "on",
  "children": null,
  "disabled": false,
  "id": undefined,
  "inputMode": "text",
  "max": undefined,
  "min": undefined,
  "name": "",
  "onBlur": [Function],
  "onChange": [MockFunction],
  "onFocus": [Function],
  "onKeyDown": [MockFunction],
  "onKeyPress": [MockFunction],
  "onKeyUp": [MockFunction],
  "pattern": null,
  "placeholder": "Placeholder",
  "required": false,
  "rows": null,
  "styled-component": "true",
  "test-style": Object {
    "::placeholder": Object {
      "color": "$theme.colors.contentSecondary",
    },
    "backgroundColor": "transparent",
    "borderStyle": "none",
    "borderWidth": 0,
    "boxSizing": "border-box",
    "caretColor": "$theme.colors.contentPrimary",
    "color": "$theme.colors.contentPrimary",
    "cursor": "text",
    "fontFamily": "$theme.typography.font300.fontFamily",
    "fontSize": "$theme.typography.font300.fontSize",
    "fontWeight": "$theme.typography.font300.fontWeight",
    "lineHeight": "$theme.typography.font300.lineHeight",
    "margin": "0",
    "maxWidth": "100%",
    "outline": "none",
    "paddingBottom": "$theme.sizing.scale400",
    "paddingLeft": "$theme.sizing.scale550",
    "paddingRight": "$theme.sizing.scale550",
    "paddingTop": "$theme.sizing.scale400",
    "width": "100%",
  },
  "type": "text",
  "value": undefined,
}
`;

exports[`BaseInput - basic functionality: Before gets correct error prop 1`] = `
Object {
  "$adjoined": "none",
  "$disabled": false,
  "$error": true,
  "$isFocused": false,
  "$positive": false,
  "$required": false,
  "$size": "default",
}
`;

exports[`BaseInput - basic functionality: Before gets correct props 1`] = `
Object {
  "$adjoined": "none",
  "$disabled": false,
  "$error": false,
  "$isFocused": false,
  "$positive": false,
  "$required": false,
  "$size": "default",
}
`;
